--- a/main.html
+++ b/main.html
@@ -8,6 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+        <h1 id="f1" >Flowers Photos</h1>
+        <p>Flowers are the blooming part of a plant, typically consisting of colorful petals that attract pollinators.</p>
+    </div>
+
+    <div>
+        <h1 id="f2" >Roses Pictures</h1>
+        <p>Roses are a type of flowering shrub with prickly stems and fragrant flowers.</p>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
