--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-        <h1 id="f1" >Flowers Photos</h1>
+        <h1 id="f1" >Flowers photos</h1>
         <p>Flowers are the blooming part of a plant, typically consisting of colorful petals that attract pollinators.</p>
     </div>
 
