--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     </div>
 
     <div>
-        <h1 id="f2" >Roses Pictures</h1>
+        <h1 id="f2" >Roses pictures</h1>
         <p>Roses are a type of flowering shrub with prickly stems and fragrant flowers.</p>
     </div>
     <script type="text/javascript" src="./script.js">
